--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
-AC_PREREQ([2.69])
+AC_PREREQ([2.67])
 AC_INIT([OmicABELnoMM], [0.1.0], [genabel-devel@r-forge.wu-wien.ac.at])
 AM_INIT_AUTOMAKE([silent-rules subdir-objects])
 AM_SILENT_RULES([yes])
@@ -14,11 +14,36 @@ AC_CONFIG_HEADERS([src/config.h])
 # change it here to keep the old behaviour by default.
 AM_MAINTAINER_MODE([enable])
 
+# Set some default compile flags
+if test -z "$CXXFLAGS"; then
+   # User did not set CXXFLAGS, so we can put in our own defaults
+    CXXFLAGS="-g -O2"
+fi
+if test -z "$CPPFLAGS"; then
+   # User did not set CPPFLAGS, so we can put in our own defaults
+    CPPFLAGS="-Wall"
+fi
+# If CXXFLAGS/CPPFLAGS are already set AC_PROG_CXX will not overwrite them
+# with its own defaults
+
+
 # Checks for programs.
-AC_PROG_CXX
 AC_PROG_CC
+AC_PROG_CXX
+
+# Since our code is in C++, set that language as the default for the
+# subsequent checks
+AC_LANG_PUSH([C++])
 
 # Checks for libraries.
+# pthread library
+AC_SEARCH_LIBS([pthread_mutex_init], [pthread], [], [
+   AC_MSG_ERROR([Unable to find the pthread_mutex_init() function])
+])
+
+# Check for openMP. If found the OPENMP_CXXFLAGS is set automatically
+AC_OPENMP
+AC_SUBST(AM_CXXFLAGS, "$OPENMP_CXXFLAGS")
 
 # Checks for header files.
 AC_CHECK_HEADERS([limits.h stdlib.h string.h sys/time.h unistd.h])
