Change one check in configure.ac, because AC_CHAGE_HEADER_STDBOOL doesn't exist in autoconf 2.67 (it apparently does exits in 2.69).
git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/genabel/pkg/OmicABELnoMM@1480 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/configure.ac
+++ b/configure.ac
@@ -49,7 +49,8 @@ AC_SUBST(AM_CXXFLAGS, "$OPENMP_CXXFLAGS")
 AC_CHECK_HEADERS([limits.h stdlib.h string.h sys/time.h unistd.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
-AC_CHECK_HEADER_STDBOOL
+#AC_CHECK_HEADER_STDBOOL # USE THIS WITH AUTOCONF 2.69
+AC_HEADER_STDBOOL
 AC_TYPE_SIZE_T
 
 # Checks for library functions.
