OmicABELnoMM: - configure.ac: Added -lopenblas in the CXXFLAGS by hand for now. Should add proper check in the future. - Definitions.h:   + Added/uncommented include statements for lapacke.h and cblas.h in an attempt to get OmicABELnoMM to compile. This fixed some warnings. However, compilation still fails. It looks like the opennblas package in Debian/Ubuntu isn't compiled with the USE_OPENMP=1 option (see http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=684344).   + Also replaces goto_set_num_threads(n) with openblas_set_num_threads(n), but that didn't help either. OpenBlas upstream says they support both anyway...
git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/genabel/pkg/OmicABELnoMM@1482 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/configure.ac
+++ b/configure.ac
@@ -17,7 +17,7 @@ AM_MAINTAINER_MODE([enable])
 # Set some default compile flags
 if test -z "$CXXFLAGS"; then
    # User did not set CXXFLAGS, so we can put in our own defaults
-    CXXFLAGS="-g -O2"
+    CXXFLAGS="-g -O2 -lopenblas"   # TODO: proper openblas check
 fi
 if test -z "$CPPFLAGS"; then
    # User did not set CPPFLAGS, so we can put in our own defaults
@@ -31,19 +31,23 @@ fi
 AC_PROG_CC
 AC_PROG_CXX
 
-# Since our code is in C++, set that language as the default for the
-# subsequent checks
-AC_LANG_PUSH([C++])
 
 # Checks for libraries.
 # pthread library
 AC_SEARCH_LIBS([pthread_mutex_init], [pthread], [], [
    AC_MSG_ERROR([Unable to find the pthread_mutex_init() function])
 ])
+# Openblas
+dnl AC_SEARCH_LIBS([], [openblas], [], [
+dnl    AC_MSG_ERROR([Unable to find the  function])
+dnl ])
+
 
 # Check for openMP. If found the OPENMP_CXXFLAGS is set automatically
 AC_OPENMP
-AC_SUBST(AM_CXXFLAGS, "$OPENMP_CXXFLAGS")
+AC_SUBST(AM_CXXFLAGS, "$OPENMP_CFLAGS")
+
+
 
 # Checks for header files.
 AC_CHECK_HEADERS([limits.h stdlib.h string.h sys/time.h unistd.h])
