Automake integration of tests now runs them using make check. Tests are also compiled along with the normal executable.
git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/genabel/pkg/OmicABELnoMM@1748 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,3 +6,6 @@ oanomm_cpp = src/AIOwrapper.cpp src/Algorithm.cpp src/Utility.cpp	\
  src/main.cpp
 
 omicabelnomm_SOURCES = $(oanomm_headers) $(oanomm_cpp)
+
+SUBDIRS = tests
+
