--- a/Makefile.am
+++ b/Makefile.am
@@ -1,11 +1,18 @@
 bin_PROGRAMS = omicabelnomm
 
-oanomm_headers = src/Definitions.h src/AIOwrapper.h src/Algorithm.h	\
- src/Utility.h
-oanomm_cpp = src/AIOwrapper.cpp src/Algorithm.cpp src/Utility.cpp \
- src/main.cpp
+oanomm_cpp = src/AIOwrapper.cpp src/Algorithm.cpp src/Utility.cpp
+oanomm_headers = $(oanomm_cpp:.cpp=.h) src/Definitions.h
 
-omicabelnomm_SOURCES = $(oanomm_headers) $(oanomm_cpp)
+omicabelnomm_SOURCES = $(oanomm_headers) $(oanomm_cpp) src/main.cpp
 
-SUBDIRS = tests
 
+## Stuff needed for the checks in the tests/ directory
+check_PROGRAMS = tests/test_omicabelnomm
+#bin_PROGRAMS += tests/test_omicabelnomm
+tests_test_omicabelnomm_SOURCES =		\
+ $(oanomm_headers)				\
+ $(oanomm_cpp)					\
+ tests/test.cpp
+
+TESTS = $(check_PROGRAMS)
+CLEANFILES = tempAL.bin tempB.bin tempY.bin tempAR.bin
