OmicABELnoMM: added documentation and examples to the Makefile.am so that they are installed as well when running 'make install'.
git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/genabel/pkg/OmicABELnoMM@1767 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,3 +16,13 @@ tests_test_omicabelnomm_SOURCES =		\
 
 TESTS = $(check_PROGRAMS)
 CLEANFILES = tempAL.bin tempB.bin tempY.bin tempAR.bin
+
+
+## Stuff needed for documentation in the doc/ directory
+dist_doc_DATA = doc/howtocompile.txt
+
+## Specify where to store the examples data
+exampledir = $(pkgdatadir)/examples
+dist_example_DATA = examples/CreateData.R examples/XL.fvd	\
+	examples/XL.fvi  examples/XR.fvd  examples/XR.fvi	\
+	examples/Y.fvd  examples/Y.fvi
