First user usable version. Several Bug-fixes. Added parameters to control thresholds of significance. Storing output as readable .txt and binary data. Both .txt and binary have different parametrization thresholds. Text-files should always store less results.Thresholds for text-files cannot include more results than the ones for binary files. Added bigger test files. Added program to transform binary result files  to text files with parametrized thresholds. Added HPC functions for sum of squares calculations.
git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/genabel/pkg/OmicABELnoMM@1817 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/configure.ac
+++ b/configure.ac
@@ -18,7 +18,8 @@ AM_MAINTAINER_MODE([enable])
 # Set some default compile flags
 if test -z "$CXXFLAGS"; then
    # User did not set CXXFLAGS, so we can put in our own defaults
-    CXXFLAGS=""
+   CXXFLAGS=" -O3"
+  #CXXFLAGS="-g -ggdb"
 fi
 if test -z "$CPPFLAGS"; then
    # User did not set CPPFLAGS, so we can put in our own defaults
@@ -36,8 +37,8 @@ AC_PROG_CXX
 AC_OPENMP
 AC_SUBST(AM_CXXFLAGS, "$OPENMP_CFLAGS")
 
-AM_CXXFLAGS="-O3 -I../libs/include/ -I./libs/include/ $AM_CXXFLAGS"
-
+AM_CXXFLAGS="-static -O3 -I../libs/include/ -I./libs/include/ $AM_CXXFLAGS"
+#AM_CXXFLAGS="-static  -I../libs/include/ -I./libs/include/ $AM_CXXFLAGS"
 # Checks for libraries.
 # pthread library
 AC_SEARCH_LIBS([pthread_mutex_init], [pthread], [], [
