Added some of the standard GNU files (like COPYING and AUTHORS) to the list of files that get distributed in OmicABELnoMM's Makefile.am.
git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/genabel/pkg/OmicABELnoMM@1842 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,7 +19,8 @@ CLEANFILES = tempAL.bin tempB.bin tempY.bin tempAR.bin
 
 
 ## Stuff needed for documentation in the doc/ directory
-dist_doc_DATA = doc/howtocompile.txt
+dist_doc_DATA = doc/howtocompile.txt doc/UserGuide.tex \
+COPYING INSTALL ChangeLog AUTHORS
 
 ## Specify where to store the examples data
 exampledir = $(pkgdatadir)/examples
