Removed a bit of debug code from OmicABELnoMM's Makefile.am.
git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/genabel/pkg/OmicABELnoMM@1846 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/Makefile.am
+++ b/Makefile.am
@@ -224,7 +224,7 @@ endif
 	$(PDFLATEX) $(PDFLATEXOPTS) $(srcdir)/$(MANTEXSRC)
 
 .tex.aux:
-	@echo === Making $@ file from $^, we are in $(shell pwd) ===
+	@echo === Making $@ file from $^ ===
 	$(PDFLATEX) $(PDFLATEXOPTS) $(srcdir)/$(MANTEXSRC)
 ## Look for citations. Make sure grep never returns an error code.
 	@grep "^\\\\citation" $(MANAUX) > .btmp.new || true
