Corrected help message about MPI in OmicABELnoMM's configure.ac.
git-svn-id: svn+ssh://svn.r-forge.r-project.org/svnroot/genabel/pkg/OmicABELnoMM@1863 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/configure.ac
+++ b/configure.ac
@@ -38,8 +38,8 @@ fi
 # If --with-mpi=no is used, use a standard C compiler instead.
 AC_ARG_WITH(mpi,
    [AS_HELP_STRING([--with-mpi],
-      [compile with MPI (shared memory parallelization) support. If\
-none is found, MPI is not used. Default: auto])
+      [compile with MPI (distributed memory parallelization) support. If\
+ none is found, MPI is not used. Default: auto])
    ]
    ,
    ,
